<resources>
    <string name="app_name">VirtualCR</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="CreateGroup">Create Group</string>
    <string name="Profile">Profile</string>
    <string name="Create_Event">Create Event</string>
    <string name="Pole">Pole</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="karan">karan</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="remind">remind</string>
    <string name="notices">notices</string>
    <string name="group">Group</string>
    <string name="chat_description">chat_description</string>
    <string name="textview">TextView</string>
    <string name="to">To</string>
    <string name="attach">attach</string>
    <string name="send">send</string>
    <string name="type">type....</string>
    <string name="answer">Answer:</string>
    <string name="question">Question:</string>
    <string name="give_answer">Give Answer</string>
    <string name="comments">Comments</string>
    <string name="j">Answer....</string>
    <string name="question2">Question....</string>
    <string name="event_name">Event Name</string>
    <string name="event_string_event_name">event_name</string>
    <string name="event_name2">Event name</string>
    <string name="place">Place</string>
    <string name="enter_place">Enter Place....</string>
    <string name="enter_event_name">Enter Event Name....</string>
    <string name="add_coordinators">Add Coordinators</string>
    <string name="to1">TO</string>
    <string name="date">Date</string>
    <string name="from">From</string>
    <string name="time1">TIme</string>
    <string name="enter_date">enter date....</string>
    <string name="enter_date2">enter date ....</string>
    <string name="time2">time..</string>
    <string name="time21">time....</string>
    <string name="calender1">calender</string>
    <string name="calender3">calender</string>
    <string name="add_member">Add Member</string>
    <string name="mobile_no">Mobile No.(including country code)</string>
    <string name="enter_password">Enter Password</string>
    <string name="not_register">Not Register ?</string>
    <string name="register_here">Register here</string>
    <string name="virtual_cr">VIRTUAL CR</string>
    <string name="otp_sent">OTP sent</string>
    <string name="otp_matched">OTP matched</string>
    <string name="resend">Resend</string>
    <string name="send_otp">Send OTP</string>
    <string name="time">Time</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="change_mobile_number">Change Mobile Number ?</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="valid_mobile">Valid Mobile</string>
    <string name="Otp_sent">OTP Sent</string>
    <string name="log_in">LOG IN</string>
    <string name="otp">OTP</string>
    <string name="name">Name</string>
    <string name="student_name">Student Name</string>
    <string name="h">*</string>
    <string name="student_college_rollno">Student College RollNo.</string>
    <string name="student_exam_rollno">Student Exam RollNo.</string>
    <string name="email_id">Email id</string>
    <string name="done">Done</string>
    <string name="upload">Upload</string>
    <string name="group_name">Group_name</string>
    <string name="group_logo">Group_logo</string>
    <string name="group_members">Group Members</string>
    <string name="create_group">Create Group</string>
    <string name="type_here">Type here ..</string>
    <string name="todo">TODO</string>
    <string name="todo1">TODO</string>
    <string name="i4">todo</string>
    <string name="l5">todo</string>
    <string name="ko5">todo</string>
    <string name="kp4">todo</string>
    <string name="mark_notify"><![CDATA[Mark & Notify]]></string>
</resources>
