<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.karan.virtualcr.MainActivity">
    <item
        android:id="@+id/CreateGroup"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orderInCategory="100"
        android:title="@string/CreateGroup"
        app:showAsAction="never" />
    <item
        android:id="@+id/Profile"
        android:orderInCategory="101"
        android:title="@string/Profile"
        app:showAsAction="never" />
    <item
        android:id="@+id/Create_Event"
        android:orderInCategory="102"
        android:title="@string/Create_Event"
        app:showAsAction="never" />
    <item
        android:id="@+id/Pole"
        android:orderInCategory="103"
        android:title="@string/Pole"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="104"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/logout"
        android:orderInCategory="105"
        android:title="Log Out"
        app:showAsAction="never" />
</menu>
