<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".StudentProfile">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="2dp">

        <EditText
            android:id="@+id/Student_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_weight="8"
            android:ems="10"
            android:gravity="center_vertical"
            android:hint="@string/student_name"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView21"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:layout_marginEnd="60dp"
            android:layout_weight="1"
            android:text="@string/h"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="18sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="2dp">

        <EditText
            android:id="@+id/Student_Rollno"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_weight="8"
            android:ems="10"
            android:gravity="center_vertical"
            android:hint="@string/student_college_rollno"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:layout_marginEnd="60dp"
            android:layout_weight="1"
            android:text="@string/h"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="18sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="2dp">

        <EditText
            android:id="@+id/Student_exam_Rollno"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_weight="8"
            android:ems="10"
            android:gravity="center_vertical"
            android:hint="@string/student_exam_rollno"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView27"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:layout_marginEnd="60dp"
            android:layout_weight="1"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="18sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="2dp">

        <EditText
            android:id="@+id/email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_weight="8"
            android:ems="10"
            android:gravity="center_vertical"
            android:hint="@string/email_id"
            android:inputType="textEmailAddress" />

        <TextView
            android:id="@+id/textView28"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:layout_marginEnd="60dp"
            android:layout_weight="1"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="18sp" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="2dp">

        <ImageView
            android:id="@+id/imageView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/com_facebook_profile_picture_blank_square"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/Upload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/imageView10"
            android:layout_alignEnd="@+id/imageView10"
            android:background="@color/colorPrimary"
            android:padding="2dp"
            android:text="@string/upload"
            android:textColor="@android:color/background_light"
            android:textSize="18sp" />
    </RelativeLayout>

    <Button
        android:id="@+id/Profile_Done"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:text="@string/done"
        android:textColor="@android:color/background_light"
        android:textSize="18sp" />


</LinearLayout>